# monty

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  plan-todo.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
benches/: main.rs
crates/monty/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-python/: Cargo.toml  pyproject.toml
crates/monty-python/python/pydantic_monty/: os_access.py
crates/monty-python/src/: exceptions.rs  external.rs  lib.rs  limits.rs  monty_cls.rs
crates/monty-python/tests/: test_async.py  test_inputs.py  test_os_access.py  test_os_access_compat.py  test_os_access_raw.py  test_os_calls.py  test_readme_examples.py  test_start.py  test_types.py
crates/monty-type-checking/src/: db.rs  lib.rs  type_check.rs
crates/monty-type-checking/tests/: good_types.py  main.rs
crates/monty-typeshed/: update.py
crates/monty/src/: asyncio.rs  exception_private.rs  expressions.rs  heap.rs  intern.rs  lib.rs  namespace.rs  object.rs  os.rs  parse.rs  prepare.rs  repl.rs  run.rs  value.rs
crates/monty/test_cases/: async__gather_all.py  pathlib__os.py
crates/monty/tests/: asyncio.rs  binary_serde.rs  (+6 more)
scripts/: iter_test_methods.py
src/: builtins.rs  evaluate.rs  exceptions.rs  expressions.rs  lib.rs  main.rs  object.rs  parse.rs  prepare.rs  run.rs  types.rs
test_cases/: bool__and_chained.py  bool__and_falsy.py  bool__and_truthy.py  bool__complex_expr.py  bool__not_and_combined.py  bool__not_falsy.py  bool__not_none.py  bool__not_truthy.py  bool__or_chained.py  bool__or_falsy.py  bool__or_truthy.py
tests/: main.rs
(+21 files in other folders)
