[build-system]
requires = ["maturin>=1.9.4,<2.0"]
build-backend = "maturin"

[project]
# uses this package name since `monty` is taken, the module is still named `monty`
name = "monty-python"
version = "0.1.0"
description = "Python bindings for the Monty sandboxed Python interpreter"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[tool.maturin]
python-source = "python"
module-name = "monty._monty"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "anyio>=4.0",
    "black>=25.12.0",
    "dirty-equals>=0.11",
    "inline-snapshot>=0.31.1",
    "pytest>=9.0.2",
    "pytest-examples>=0.0.14",
    "pytest-pretty>=1.3.0",
]

[tool.pytest.ini_options]
anyio_mode = "auto"
xfail_strict = true
filterwarnings = ["error"]
